<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="workout_no">Workout 1</string>
    <string name="day1">S/B Primary</string>
    <string name="day2">Deadlift Primary</string>
    <string name="day3">S/B Secondary</string>
    <string name="day4">Deadlift Secondary</string>
    <string name="complete">Complete Week</string>
    <string name="day">Day</string>
    <string name="Exercise1">Squat</string>
    <string name="Exercise2">Bench</string>
    <string name="Exercise3">Deadlift</string>
    <string name="Exercise4">Accessories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>